src/objects/RecaiusUserInfo__c.object
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>契約ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>RecaiusGroup_Id__c</fullName>
        <label>RecaiusGroup_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecaiusGroup__c</fullName>
        <label>Recaiusグループ名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>ユーザーID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatterGroup_Id__c</fullName>
        <label>chatterGroup_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatterGroup__c</fullName>
        <label>chatterGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RecaiusUserInfo</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>